--- a/testMap.html
+++ b/testMap.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8">
     <title>Info windows</title>
     <style>
@@ -21,11 +23,15 @@
   <body>
 	<div id="logo"></div>
     <div id="map"></div>
+	<script type="text/javascript" src="fileReader.js"></script> 
     <script>
 
       // This example displays a marker at the center of Australia.
       // When the user clicks the marker, an info window opens.
 
+	  
+	readTextFile("content_thai.csv");
+	  
       function initMap() {
 		var zoomRate = 13;
         var sanamluang = {lat: 13.754937, lng: 100.493058};
