--- a/testMap.html
+++ b/testMap.html
@@ -6,22 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8">
     <title>The King Map Site</title>
-    <link rel="shortcut icon" type="image/x-icon" href="image/marker.png" />`
-    <style>
-        /* Always set the map height explicitly to define the size of the div
-         * element that contains the map. */
-        #map {
-            height: 100%;
-        }
-
-        /* Optional: Makes the sample page fill the window. */
-        html, body {
-            height: 90%;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-    <div id="fb-root"></div>
+    <link rel="shortcut icon" type="image/x-icon" href="image/marker.png" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script>(function (d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
@@ -146,8 +132,9 @@
     </script>
    </head>
     <body>
-        <div id="logo"></div>
+        <div id="logo">logo</div>
         <div id="map"></div>
+        <div id="fb-root"></div>
         <div class="fb-comments" data-href="https://localhost/testMap.html/" data-numposts="5"></div>
 
     </body>
