--- a/testMap.html
+++ b/testMap.html
@@ -8,6 +8,7 @@
       <title>เดินตามรอยพ่อ</title>
       <link rel="shortcut icon" type="image/x-icon" href="image/marker.png" />
       <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Pridi:400,600" rel="stylesheet">
       <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm253oNfhS4tZCPLNpR8x_butc4CLjNwo&callback=initMap"></script>
       <script src="js/script.js"></script>
       <script>(function (d, s, id) {
@@ -21,9 +22,21 @@
       </script>
    </head>
     <body>
-        <div id="logo">logo</div>
+      <div id="header">
+        <p id="logo">เดินตามรอยพ่อ</p>
+      </div>
+      <div id="content">
         <div id="map"></div>
-        <div id="fb-root"></div>
-        <div class="fb-comments" data-href="https://localhost/testMap.html/" data-numposts="5"></div>
+      </div>
+      <div id="footer">
+        <div id="progress-bar">
+          <div id="my-progress-bar"></div>
+          <p class="label">ความก้าวหน้า <span>50%</span> แล้ว !</p>
+        </div>
+        <div id="comment-section">
+          <div id="fb-root"></div>
+          <div class="fb-comments" data-href="https://localhost/testMap.html/" data-numposts="5"></div>
+        </div>
+      </div>
     </body>
 </html>
