hard-coded contents + messed up progress bar
ไม่อ่านไฟล์แล้ว ยัดเนื้อหาลง string ไปเลย แล้วก็ใส่โปรเกรสบาร์ที่แก้ง่าย
ๆ ลงไป แต่ยังพังอยู่

--- a/testMap.html
+++ b/testMap.html
@@ -30,13 +30,16 @@
       </div>
       <div id="footer">
         <div id="progress-bar">
-          <div id="my-progress-bar"></div>
-          <p class="label">ความก้าวหน้า <span>50%</span> แล้ว !</p>
+          <progress id="my-progress-bar" class = "my-progress-bar" value="70" max="100"></progress>
+         <p class="label">ความก้าวหน้า <span>50%</span> แล้ว !</p>
         </div>
         <div id="comment-section">
           <div id="fb-root"></div>
           <div class="fb-comments" data-href="https://localhost/testMap.html/" data-numposts="5"></div>
         </div>
       </div>
+    <script>
+   //   var element = document.getElementById('my-progress-bar').style.width = "70%";
+    </script>
     </body>
 </html>
