--- a/testMap.html
+++ b/testMap.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Pridi:400,600" rel="stylesheet">
       <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm253oNfhS4tZCPLNpR8x_butc4CLjNwo&callback=initMap"></script>
-      <script src="js/script.js"></script>
+      <script src="js/initMap.js"></script>
       <script>(function (d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0];
           if (d.getElementById(id)) return;
@@ -30,16 +30,36 @@
       </div>
       <div id="footer">
         <div id="progress-bar">
-          <progress id="my-progress-bar" class = "my-progress-bar" value="70" max="100"></progress>
-         <p class="label">ความก้าวหน้า <span>50%</span> แล้ว !</p>
+          <progress id="my-progress-bar" class = "my-progress-bar" max="100"></progress>
+         <p id = "progress-label" class="label"></p>
         </div>
+
+        <script>
+          var ca = document.cookie.split(';');
+          var count = 0;
+          for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') {
+              c = c.substring(1);
+            }
+            if (c.indexOf(name) == 0) {
+              if(c.substring(name.length, c.length).split('=')[1]=='true') {
+                count++;
+       //         alert(true);
+              }
+            }
+          }
+       //   alert(count+' '+list.length);
+          var progressBar = document.getElementById("my-progress-bar");
+          var percentValue = count/list.length*100;
+          progressBar.value = percentValue;
+          document.getElementById('progress-label').textContent = 'ความก้าวหน้า '+percentValue+' % แล้ว !';
+        </script>
         <div id="comment-section">
           <div id="fb-root"></div>
           <div class="fb-comments" data-href="https://localhost/testMap.html/" data-numposts="5"></div>
         </div>
       </div>
-    <script>
-   //   var element = document.getElementById('my-progress-bar').style.width = "70%";
-    </script>
+
     </body>
 </html>
