--- a/testMap.html
+++ b/testMap.html
@@ -6,13 +6,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8">
     <title>เดินตามรอยพ่อ</title>
-    <link rel="shortcut icon" type="image/x-icon" href="image/marker.png"/>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="image/ico.png"/>
     <link href="https://fonts.googleapis.com/css?family=Pridi:400,600" rel="stylesheet">
     <script src="js/initMap.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm253oNfhS4tZCPLNpR8x_butc4CLjNwo&callback=readThai"></script>
-
     <script>
         /* Facebook comment code */
         (function (d, s, id) {
@@ -25,10 +24,9 @@
         }(document, 'script', 'facebook-jssdk'));
     </script>
 </head>
-
 <body>
 <div id="header">
-    <p id="logo">เดินตามรอยพ่อ</p>
+    <p id="logo"><img src="../image/banner.png" alt="เดินตามรอยพ่อ"></p>
 </div>
 <div id="content">
     <div id="map"></div>
@@ -65,10 +63,10 @@
         document.getElementById('progress-label').textContent = 'ความก้าวหน้า ' + Math.round(percentValue*100)/100 + '% แล้ว !';
         }
     </script>
-    <div id="comment-section">
+    <!--<div id="comment-section">
         <div id="fb-root"></div>
         <div class="fb-comments" data-href="https://localhost/testMap.html/" data-numposts="5"></div>
-    </div>
+    </div>-->
 </div>
 </body>
 </html>
