--- a/testMap.html
+++ b/testMap.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div id="header">
-    <p id="logo"><img src="../image/banner.png" alt="เดินตามรอยพ่อ"></p>
+    <p id="logo"><img src="image/banner.png" alt="เดินตามรอยพ่อ"></p>
 </div>
 <div id="content">
     <div id="map"></div>
