Change popup style

--- a/testMap.html
+++ b/testMap.html
@@ -60,7 +60,7 @@
         var progressBar = document.getElementById("my-progress-bar");
         var percentValue = count / list.length * 100;
         progressBar.value = percentValue;
-        document.getElementById('progress-label').textContent = 'ความก้าวหน้า ' + Math.round(percentValue*100)/100 + '% แล้ว !';
+        document.getElementById('progress-label').textContent = 'ฉันเคยไป ' + Math.round(percentValue*100)/100 + '% แล้ว !';
         }
     </script>
     <!--<div id="comment-section">
